# Compiladores

./: CMakeLists.txt  main.cpp  main.h
lexer/: exceptionNotADigit.cpp  exceptionNotADigit.h  exceptions.cpp  exceptions.h  id.cpp  id.h  lexer.cpp  lexer.h  num.cpp  num.h  operator.cpp  operator.h  tag.cpp  tag.h  token.cpp  token.h
parser/: parser.cpp  parser.h
